themes/evolve/lessc/PD/PD.less
/* ... */
#block-block-240 .form-control{
    background-color:transparent!important;
	border: 1px solid white!important;
}

#block-block-241 table th{
    background-color: #5E6167;
	color: white;
    border: 1px solid #ccc!important;
    font-weight: normal!important;
}
#node-250 table th, #node-251 table th{
    color: #009fda;
    border: 1px solid #ccc!important;
    font-weight: normal!important;
}
#block-block-241 table tr:nth-child(even){
    background-color:rgba(195,200,200,0.5);
}
#block-block-241 td, #block-block-241 th{
    padding: 10px!important;
    border-right: 1px solid white;
}
#node-250 td, #node-250 th, #node-251 td, #node-251 th{
    padding: 10px!important;
    border-right: 1px solid #ccc;
	border-bottom: 1px solid #ccc;
    color: #004250;
}
#node-250 table tr td:nth-child(1), #node-251 table tr td:nth-child(1){
    border-left: 1px solid #ccc;
}
.scleft {
    margin-top: 16px;
	padding:0;
}
.scleft p {
    color: #004250;
    font-weight: 400;
}
.scright p {
    color: #004250;
    font-weight: 400;
}
.scleft label{
    font-weight:400!important;
	width: 90%;
}
.scleft p:nth-child(1) {
    color: #009fda!important;
}
.scright {
    margin-top: 16px;
	padding-right:0;
}
.scright p:nth-child(1) {
    color: #009fda !important;
}
.shopCartButton {
    width: 150px!important;
    color: white;
    margin: 20px 5px 36px 0;
    height: 35px!important;
}
#accept1{
    margin-left:32px!important;
	position: absolute;
}
#accept2{
    margin-left: 32px!important;
	position: absolute;
}
#accept3{
    margin-left: 32px!important;
	position: absolute;
}
#node-250 table i.fa, #node-251 table i.fa{
    margin-left:8px;
}
div[id^="myCart"] .modal-dialog{
    border:none!important;
}
div[id^="myCart"] .modal-body{
    margin-top: -140px;
}
div[id^="myCart"] .modal-body h3{
    padding-left:27px;
	
}
div[id^="myCart"] .modal-body a.addCartlink{
    margin-left: 42px; 
}
::-webkit-input-placeholder { /* WebKit, Blink, Edge */
    color:    white;
}

.searchds a {
    color: white;
   
    text-decoration: underline;
}
.pdSearchButton{
    float:right;
}
#node-249 .region div {
    padding: 0;
	
}
.detailContent div{
    border-bottom: 1px solid lightgray;
    border-right: 1px solid lightgray;
	height:140px;
}

.detailContent div:nth-child(odd) {
    border-left: 1px solid lightgray;
}
.detailContent div:nth-child(2) {
    border-top: 1px solid lightgray;
}
.detailContent div:nth-child(1) {
    border-top: 1px solid lightgray;
}
#tabpd  li{
        width: 33%;
}
#tabpd{
    border-bottom:none!important;
	
}
#tabpd li a {
    color: #004250;
    font-weight: 600;
    background-color: lightgray;
    padding-left: 26%;
}
#tabpd li.active a {
    background-color: rgba(137,159,153,0.2)!important;
}
#node-249 .fade.in{
    background-color: rgba(137,159,153,0.2);
    margin-top: 0px !important;
	margin-bottom:35px;
    width: 99%;
	padding:15px;
}
.detailContent p,.detailContent h3  {
    margin-left: 10px;
	margin-bottom: 10px;
}

div#block-block-241 a:not(.btn) i {
    color: #5E6167;
}
.addCartButton{
    float:left;
	color: white;
}
.detailContent a.addCartlink {
   
    color: white!important;
}
#node-249 .modal.fade.in {
    margin-top: 6%!important;
    margin-left: -14%;
    background-color: transparent;
    width: 122%;
    height: 100%;
    overflow-y: hidden!important;
 
}
#node-249 .modal-content{
    border:none!important;
	border-radius:0px!important;
	width:107%;
}
#node-249 div[id^='down'] {
    border: 1px solid lightgray;
    background-color: rgba(137,159,153,0.2);
    color: #004250;
	padding-bottom: 22px;
    padding-top: 10px;
}
#node-249 .open{
    float:right;
}
#node-249 .close{
    opacity: 0.5!important;
	font-size: 16px!important;
	line-height:2;
}
#login .btn{
    float:right;
}
#login .modal-header{
    border-bottom:none!important;
}
#login .modal-body{
    padding-bottom:40px!important;
}
input[value="Sign in"], input[value="Submit"], input[value="Next"]{
    float: right;
    width: 60px;
    height: 30px;
    padding: 5px;
    background-color: #009fda;
    text-align: center;
    color: white;
}
#registerMember .submitMember{
    float: right;
    width: 60px;
    height: 30px;
    padding: 5px;
    background-color: #009fda;
    text-align: center;
    color: white; 
	border:none;
}
#login a.signIn:hover, #node-254 a.signIn:hover{
    color:white!important;
}
#node-254 a.signIn{
    margin-bottom: 20px;
}
#registerMember h4.modal-title,  #registerPDUser h4.modal-title, #loginPopWindow h4.modal-title, #signupWebUser h4.modal-title{
    color: #009fda;
    font-weight: 400;
	margin-bottom: -10px;
}
#registerMember h4.modal-title, #signupWebUser h4.modal-title{
    margin-bottom: 11px;
    margin-left: 13px;
}
#registerMember .modal-header, #signupWebUser .modal-header{
    border-bottom: none!important;
}
#registerMember .form-control,  #registerPDUser .form-control,  #signupWebUser .form-control{
    border-radius: 0px!important;
    margin-bottom: 10px;
}
#registerMember input[type=checkbox],  #registerPDUser input[type=checkbox]{
    margin-right: 3px;
}
#registerMember label,  #registerPDUser label,  #signupWebUser label{
    font-weight: 400;
}
.registerDes{
    color: #009fda;
    font-weight: 400;
    font-size: 20px;
    margin-left: 12px;
}
#registerMember .modal-content, #signupWebUser .modal-content,{
    border:none!important;
	border-radius:0px;
}
#registerMember #Confirm-policy{
    margin-left:6px;
}
#registerMember .payment-line,  #registerPDUser .payment-line{
    border-top: 1px solid lightgray!important;
    margin-top: 13px;
    padding-top: 8px;
}
div[id="jobnoticement"], div[id="processWindow"], div[id="registerPDUser"], div[id="popUpWindow"], div[id="deleteConfirmwindow"], div[id="registerMember"], div[id="loginPopWindow"],div[id="myMap"], div[id="signupWebUser"]{
    display:none;
}
div[aria-describedby="registerPDUser"].ui-dialog {
    z-index: 1050!important;
    left: 25%!important;
	width: 620px!important;
	
}
/* ... */

